# mshqc

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md   LICENSE  MANIFEST.in  README.md  README_old.md  basis  build.sh  build1.sh  environment.yml  fast_rebuild.sh  install.sh  install_dependencies.sh  push_to_github.sh  pyproject.toml  rebuild.sh  requirements.txt  setup.py  setup.py.backup  setup_complex.py  setup_simple.py  struktru.md  test.py  test2.py  test_summary.py  ump3_debug_patch.cc
cmake/: CMakeLists.txt  FindLibcint.cmake  MSHQCConfig.cmake.in  build.sh
cmake/scritpts/: check_installation.py  test_mshqc.py 
docs/: QUICKSTART.md  TROUBLESHOOTING.md
docs/debug analisis/: analisis grok.tex  eri_transformer.cc  eri_transformer.h  integrals.cc  ump2.cc  ump2.h  ump3.cc  ump3.h  ump3_test.cc
docs/installation/: LINUX.md  README.md  TROUBLESHOOTING.md  WINDOWS.md
examples/: dfmp2_integrals_test.cc  dfmp2_test.cc  li_ccpvtz_test.cc  rhf_he_test.cc  rhf_test.cc  rmp_test.cc  rohf_test.cc  test_new_ump3.cc  uhf_test.cc  ump2_test.cc  ump3_pV5Z.cc  ump3_test.cc
examples/ci_tests/: cisd_h2_test.cc  cisd_onthefly_test.cc  determinant_test.cc  excitation_generator_test.cc  h2_ci_matrix_element_test.cc  h2_ci_sto3g_regression.cc  h2_dissociation_ci_test.cc  he_fci_regression.cc  li_all_ci_methods_comparison.cc  li_ccpvtz_all_methods_nist.cc  li_ccpvtz_ci_benchmark.cc  li_cisdt_benchmark.cc  li_fci_validation_FIXED.cc  li_uhf_cisd_test_FIXED.cc  test_cholesky_li_sto3g.cc  test_cholesky_mo_transform.cc  test_cholesky_n10.cc  test_cholesky_n15.cc  test_cholesky_n20.cc  test_cholesky_simple.cc  test_cipsi_h2_sto3g.cc  test_cipsi_li_ccpvtz.cc  test_cipsi_simple.cc  test_fci_vs_cipsi.cc  test_integrated_mp_fci_driver.cc  test_mp_fci_validation.cc  test_mp_natural_orbitals_demo.cc  test_natural_orbitals.cc  validate_natural_orbital_logic.py
examples/gradient/: README.md  test_gradient_h2.cc  test_gradient_h2o_pvdz.cc  test_gradient_li.cc  test_gradient_lih.cc  test_optimize_h2.cc
examples/mcscf/: test_sacas_li.cc
examples/mcscf_tests/: casscf_h2_test.cc  demo_natural_orbital_integration.cc  h2_caspt2_test.cc  h2_casscf_simple.cc  he_caspt2_test.cc  li_caspt2_test.cc  li_caspt2_vs_mrmp2_ccpvtz.cc  li_casscf_test.cc  li_ci_integrals_debug.cc  li_diagnostic.cc  li_ground_state_fixed.cc  li_uhf_caspt2_ccpvtz.cc  test_li_ump3_ccpvtz.cc  test_li_ump3_sto3g.cc
examples/mp_tests/: cholesky_caspt2_test.cc  df_caspt2_li_test.cc  df_minimal_test.cc  li_ccpvqz_hierarchy_test.cc  mpn_hierarchy_complete.cc  quick_mp_hierarchy_test.cc  rmp2_test.cc  rmp3_h2_ccpvdz_test.cc  rmp3_h2_sto3g_test.cc  rmp3_h2o_ccpvdz_test.cc  rmp3_h2o_sto3g_test.cc  rmp3_he2_test.cc  rmp3_ne_sto3g_test.cc  rmp3_test.cc  t3_quick_test.cc  test_3center_simple.cc  test_eri3_availability.cc  ump3_li_test.cc  ump4_test.cc  ump4_validation_test.cc  ump5_li_test.cc  wavefunction_test.cc
examples/user_example/: CMakeLists.txt  main.cpp
hasil/: hasil_test_FCI.md  hasil_test_gs_li_ss_caspt3.md  hasil_test_li_sa_caspt3
include/mshqc/: basis.h  cholesky_omp2.h  cholesky_omp3.h  cholesky_rhf.h  cholesky_rmp2.h  cholesky_rmp3.h  cholesky_rohf.h  cholesky_uhf.h  cholesky_uhf.h,backup  cholesky_ump2.h  cholesky_ump3.h  cholesky_ump3.h.backup  dfmp2.h  integrals.h  libcint_wrapper.h  molecule.h  mp2.h  mpn_hierarchy.h  omp3.h  scf.h  spherical_integration.h  spherical_transformer.h  ump2.h  ump2.h.backup2  ump3.h  ump3.h.backupp
include/mshqc/ci/: ci_utils.h  cipsi.h  cis.h  cisd.h  cisdt.h  davidson.h  determinant.h  excitation_generator.h  external_space.h  fci.h  hamiltonian_sparse.h  mrci.h  natural_orbitals.h  size_consistency.h  slater_condon.h  sparse_coo.h  sparse_csr.h  transition_density.h  wavefunction_analysis.h
include/mshqc/foundation/: opdm.h  rmp2.h  rmp3.h  rmp4.h  wavefunction.h
include/mshqc/gradient/: analytical_gradient.h  gradient.h  optimizer.h
include/mshqc/integrals/: cholesky_direct.h  cholesky_eri.h  eri_transformer.h  (+2 more)
python/: bindings.cc  bindings.cc.backup  bindings.cc.backup2  bindings.cc.backup3  example.py
python test/: debug_attributes.py  test_caspt2_standard.py  test_cd_ss_caspt3.py  test_cd_ss_casscf_banakatom.py  test_cholesky_omp2.py  test_cholesky_rmp3.py  test_cholesky_sa_caspt3.py  test_dummy.py  test_li_cholesky_ss_caspt3.py  test_li_omp3.py  test_rmp_atom.py  test_standar_UHF.py
python/mshqc/: __init__.py  _mshqc.pyi  calculators.py  session.py  utils.py
python/mshqc.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/ci/: ci_utils.cc  cipsi.cc  cis.cc  cisd.cc  cisdt.cc  davidson.cc  determinant.cc  excitation_generator.cc  fci.cc  hamiltonian_sparse.cc  mrci.cc  natural_orbitals.cc  size_consistency.cc  slater_condon.cc  sparse_coo.cc  transition_density.cc  wavefunction_analysis.cc
src/core/: basis.cc  basis.cc.backup  integrals.cc  libcint_wrapper.cc  molecule.cc  spherical_integration.cc  spherical_transformer.cc
src/foundation/: opdm.cc  rmp2.cc  rmp3.cc  rmp4.cc  wavefunction.cc
src/gradient/: analytical_gradient.cc  numerical_gradient.cc  optimizer.cc
src/integrals/: cholesky_direct.cc  cholesky_eri.cc  eri_transformer.cc
src/integration/: mp_ci_adapter.cc
src/mcscf/: active_space.cc  caspt2.cc  casscf.cc  cholesky_caspt2.cc  cholesky_casscf.cc  cholesky_sa_caspt2.cc  cholesky_sa_caspt3.cc  cholesky_sa_caspt3.cc.backup  cholesky_sa_casscf.cc  cholesky_sa_casscf.cc.backupp  cholesky_uno.cc  df_caspt2.cc  external_space.cc  mrmp2.cc  multi_root_ci.cc  sa_casscf.cc
src/mp/: mp_density.cc  ump4.cc  ump5.cc
src/mp2/: cholesky_omp2.cc  cholesky_rmp2.cc  cholesky_ump2.cc  dfmp2.cc  omp2.cc  semicanonical.cc  ump2.cc
src/mp3/: cholesky_omp3.cc  cholesky_rmp3.cc  cholesky_ump3.cc  omp3.cc  ump3.cc  ump3_debug.cc  ump3_energy.cc.new
src/scf/: README.md  backuppr cholesky_uhf.backup  cholesky_rhf.cc  cholesky_rohf.cc  cholesky_uhf.cc  cholesky_uhf.cc.backup  diis.cc  rhf.cc  rohf.cc  uhf.cc  uhf.cc.backup
src/validation/: mp_vs_fci.cc
tests/: li_ccpvtz_psi4.py  li_omp2_psi4.py  test_ump3_complete_li_sto3g.cc  test_ump3_oxygen.cc
(+22 files in other folders)
