[build-system]
# Menambahkan cmake dan ninja agar proses kompilasi C++ berjalan lancar
requires = [
    "setuptools>=64", 
    "wheel", 
    "pybind11>=2.12", 
    "numpy>=1.22", 
    "cmake>=3.18", 
    "ninja"
]
build-backend = "setuptools.build_meta"

[project]
name = "mshqc"
version = "0.1.0"
authors = [
    {name = "Muhamad Sahrul Hidayat"},
]
description = "Python bindings for MSH-QC quantum mechanics library"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering :: Chemistry",
]
dependencies = [
    "numpy>=1.22",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "sphinx>=3.0",
    "matplotlib",
]

[project.urls]
Homepage = "https://github.com/syahrulhidayat/mshqc"
"Bug Tracker" = "https://github.com/syahrulhidayat/mshqc/issues"

[tool.setuptools]
# Ini memberitahu setuptools paketnya ada di folder python/mshqc
package-dir = {"" = "python"}
packages = ["mshqc"]

[tool.setuptools.package-data]
mshqc = ["py.typed"]